#
# CMakeLists.txt - cmake build file for API Design examples
#
# Copyright (c) 2010-2024, Martin Reddy. All rights reserved.
# Distributed under the X11/MIT License. See LICENSE.txt.
# See https://APIBook.com/ for the latest version.
#

# Declare the minimum version of cmake that we need
cmake_minimum_required(VERSION 3.0)

# Specify the subdirectories to build
add_subdirectory(hide_class)
add_subdirectory(coord2d_template)
add_subdirectory(shared_pointer)
add_subdirectory(callback_instance)
add_subdirectory(callback_static)
