#
# CMakeLists.txt - cmake build file for API Design examples
#
# Copyright (c) 2010-2024, Martin Reddy. All rights reserved.
# Distributed under the X11/MIT License. See LICENSE.txt.
# See https://APIBook.com/ for the latest version.
#

# See python/CMakeLists.txt for details before enabling this
#add_subdirectory(python)

# See ruby/CMakeLists.txt for details before enabling this
#add_subdirectory(ruby)
