#
# CMakeLists.txt - cmake build file for API Design examples
#
# Copyright (c) 2010-2024, Martin Reddy. All rights reserved.
# Distributed under the X11/MIT License. See LICENSE.txt.
# See https://APIBook.com/ for the latest version.
#

# Specify the subdirectories to build
add_subdirectory(plugin_api)
add_subdirectory(visitor)
add_subdirectory(curious_templates)
